--- a/style.css
+++ b/style.css
@@ -112,6 +112,11 @@ button.white{
     left: 20px;
 }
 
+#mobile{
+  display: none;
+  align-items: center;
+}
+
 /*Home page*/
 #hero{
     background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/fs/b1eca884922555.5d86dca91ce67.jpg");
@@ -232,14 +237,14 @@ button.white{
 #feature .fe-box:nth-child(4) h6{
     color: #000000;
 }
-/*----------------*/
+/*-------------------------*/
  /* #product1 {
     min-height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
     background-color: #EFEFEF;
-  }*/
+  }
 #product1 .slide-container{
     max-width: 1120px;
     width: 100%;
@@ -359,8 +364,8 @@ button.white{
     #product1 .swiper-navBtn{
       display: none;
     }
-  }
-  /*---------*/
+  }*/
+/*----------------------*/
 #sm-banner{
   display: flex;
   justify-content: space-between;
@@ -369,6 +374,7 @@ button.white{
 
 #sm-banner .banner-box{
   display: flex;
+  margin-bottom: 10px;
   flex-direction: column;
   justify-content: center;
   background-size: cover;
@@ -399,7 +405,7 @@ button.white{
 }
 
 #sm-banner .b2{
-  min-width:750px;
+  min-width:700px;
   height: 50vh;
   text-align: right;
   align-items: flex-end;
@@ -436,6 +442,10 @@ footer .col{
   flex-direction: column;
   align-items:  flex-start;
   margin-bottom: 20px;
+}
+
+footer .icon{
+  font-size: 25px;
 }
 
 footer .logo{
@@ -486,4 +496,41 @@ footer .install img{
 footer .copyright {
   width: 100%;
   text-align: center;
+  margin-top: 50px;
+}
+
+@media (max-width:799px){
+  #navbar{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    position: fixed;
+    top: 0;
+    right: -300px;
+    height: 100vh;
+    width: 300px;
+    background-color: #E3E6F3;
+    box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
+    padding: 80px 0 0 10px;
+    transition: 0.3s;
+  }
+
+  #navbar.active{
+    right: 0px;
+  }
+  #navbar li{
+    margin-bottom: 25px;
+  }
+
+  #mobile{
+    display: flex;
+    align-items: center;
+  }
+
+  #mobile i{
+    color: #1a1a1a;
+    font-size:  24px;
+    padding-left: 20px;
+  }
 }
