--- a/style.css
+++ b/style.css
@@ -117,6 +117,10 @@ button.white{
   align-items: center;
 }
 
+#close{
+  display: none;
+}
+
 /*Home page*/
 #hero{
     background-image: url("https://mir-s3-cdn-cf.behance.net/project_modules/fs/b1eca884922555.5d86dca91ce67.jpg");
@@ -384,7 +388,7 @@ button.white{
 }
 
 #sm-banner .b1{  
-  min-width:700px;
+  min-width:725px;
   height: 50vh;
   text-align: left;
   align-items: flex-start;
@@ -405,7 +409,7 @@ button.white{
 }
 
 #sm-banner .b2{
-  min-width:700px;
+  min-width:725px;
   height: 50vh;
   text-align: right;
   align-items: flex-end;
@@ -500,6 +504,10 @@ footer .copyright {
 }
 
 @media (max-width:799px){
+  .section-p1{
+    margin: 40px 40px;
+  }
+
   #navbar{
     display: flex;
     flex-direction: column;
@@ -532,5 +540,93 @@ footer .copyright {
     color: #1a1a1a;
     font-size:  24px;
     padding-left: 20px;
+  }
+
+  #close{
+    display: initial;
+    position: absolute;
+    top: 30px;
+    left: 30px;
+    color: #222;
+    font-size: 24px;
+  }
+
+  #lg-bag,
+  #lg-acc{
+    display: none;
+  }
+
+  #hero {
+    height: 90vh;
+    padding: 0 80px;
+    background-position: top 30% right 30% ;
+  }
+
+  #feature {
+    justify-content: center;
+  }
+
+  #feature .fe-box {
+    margin: 15px 15px;
+  }
+
+  #sm-banner .banner-box {
+    min-width: 100%;
+    height: 35vh;
+    padding: 30px;
+  }
+}
+
+@media (max-width:477px){
+  .section-p1{
+    padding: 20px;
+  }
+
+  #header{
+    padding: 10px 30px;
+  }
+  
+  h1{
+    font-size: 38px;
+  }
+
+  h2{
+    font-size: 32px;
+  }
+
+  #hero{
+    padding: 0 20px;
+    background-position: 55%;
+  }
+
+  #hero h4,
+  #hero p{
+    color: #222;
+  }
+
+  #hero h2{
+    color: #0361a9;
+  }
+
+  #feature{
+    justify-content: space-between;
+  }
+
+  #feature .fe-box{
+    width: 155px;
+    margin: 0 0 15px 0;  
+  }
+
+  #sm-banner .banner-box{
+    height: 40vh;
+    width: 100%;
+  }
+
+  #sm-banner .b2{
+    margin-top: 20px;
+  }
+
+  footer .copyright{
+    text-align: start;
   }
 }
