--- a/product.css
+++ b/product.css
@@ -216,12 +216,28 @@ footer .copyright {
   font-weight: 600;
 }
 
-@media (max-width:799px){
-  .section-p1{
-    margin: 40px 40px;
-  }
+#prodetails .single-proimg{
+    width: 40%;
+    margin-right: 50px;
+}
 
-  #navbar{
+.small-img-group{
+    display: flex;
+    justify-content: space-between;
+}
+
+.small-img-col
+{
+    flex-basis: 24%;
+    cursor: pointer;
+}
+
+@media (max-width:799px){
+    .section-p1{
+    margin: 40px 40px;
+    }
+
+    #navbar{
     display: flex;
     flex-direction: column;
     align-items: flex-start;
@@ -235,39 +251,40 @@ footer .copyright {
     box-shadow: 0 40px 60px rgba(0, 0, 0, 0.1);
     padding: 80px 0 0 10px;
     transition: 0.3s;
-  }
+    }
 
-  #navbar.active{
-    right: 0px;
-  }
-  #navbar li{
-    margin-bottom: 25px;
-  }
+    #navbar.active{
+        right: 0px;
+    }
 
-  #mobile{
-    display: flex;
-    align-items: center;
-  }
+    #navbar li{
+        margin-bottom: 25px;
+    }
 
-  #mobile i{
-    color: #1a1a1a;
-    font-size:  24px;
-    padding-left: 20px;
-  }
+    #mobile{
+        display: flex;
+        align-items: center;
+    }
 
-  #close{
-    display: initial;
-    position: absolute;
-    top: 30px;
-    left: 30px;
-    color: #222;
-    font-size: 24px;
-  }
+    #mobile i{
+        color: #1a1a1a;
+            font-size:  24px;
+        padding-left: 20px;
+    }
 
-  #lg-bag,
-  #lg-acc{
-    display: none;
-  }
+    #close{
+        display: initial;
+        position: absolute;
+        top: 30px;
+        left: 30px;
+        color: #222;
+        font-size: 24px;
+    }
+
+    #lg-bag,
+    #lg-acc{
+        display: none;
+    } 
 
   #hero {
     height: 90vh;
