--- a/product.css
+++ b/product.css
@@ -219,6 +219,7 @@ footer .copyright {
 #prodetails .single-proimg{
     width: 40%;
     margin-right: 50px;
+
 }
 
 .small-img-group{
@@ -230,6 +231,16 @@ footer .copyright {
 {
     flex-basis: 24%;
     cursor: pointer;
+}
+
+.small-img-col img{
+    width: 400px;
+}
+
+.single-prodetails svg{
+    height: 20px;
+    width: 20px;
+    margin-right: 5px;
 }
 
 @media (max-width:799px){
