--- a/product.css
+++ b/product.css
@@ -256,6 +256,44 @@ footer .copyright {
     color: #222;
 }
 
+#prodetails .rentbtn {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px 15px;
+    gap: 15px;
+    background-color: #41B06E;
+    outline: 3px #41B06E solid;
+    outline-offset: -3px;
+    border-radius: 5px;
+    border: none;
+    cursor: pointer;
+    transition: 400ms;
+    margin: 20px;
+}
+
+#prodetails .rentbtn .text {
+    color: white;
+    font-weight: 700;
+    font-size: 0.8em;
+    transition: 400ms;
+}
+
+#prodetails .rentbtn:hover {
+    background-color: transparent;
+}
+
+#prodetails .rentbtn:hover .text {
+    color: #41B06E;
+}
+
+#prodetails button {
+    padding: 0;
+    margin: 0;
+    border: none;
+    background: none;
+    cursor: pointer;
+}
 
 
 @media (max-width:799px){
