--- a/Calculator.css
+++ b/Calculator.css
@@ -7,4 +7,13 @@
 body{
     min-height: 100vh;
     background: #eee;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.calculator{
+    width: 300px;
+    height: 500px;
+    box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.3);
 }
