--- a/Calculator.css
+++ b/Calculator.css
@@ -15,5 +15,22 @@ body{
 .calculator{
     width: 300px;
     height: 500px;
+    background: #22252D;
+    overflow: hidden;
+    border-radius: 12px;
     box-shadow: 4px 4px 30px rgba(0, 0, 0, 0.3);
+}
+
+form input{
+    width: 100%;
+    height: 150px;
+    border: none;
+    border-radius: 12px;
+    font-size: 2rem;
+    padding: 1rem;
+    color: #fff;
+    background: #000;
+    text-align: right;
+    pointer-events: none;
+    
 }
