--- a/style.css
+++ b/style.css
@@ -434,23 +434,15 @@ button.white{
   border: 1px solid #fff;
   color: #000000;
 }
-
-@import url('https://fonts.googleapis.com/css?family=Hind:300,400&display=swap');
-
-$bg: #fff;
-$text: #7288a2;
-$gray: #4d5974;
-$lightgray: #e5e5e5;
-$blue: #03b5d2;
-
-* {
+/*
+#FAQ * {
   box-sizing: border-box;
   &::before, &::after {
     box-sizing: border-box;
   }
 }
 
-body {
+#FAQ body {
   margin: 0;
   padding: 0;
   font-family: 'Hind', sans-serif;
@@ -458,9 +450,9 @@ body {
   color: #4d5974;
   display: flex;
   min-height: 100vh;
-}
+}*/
 
-.container {
+#FAQ .container {
   margin: 0 auto;
   padding: 4rem;
   width: 48rem;
@@ -468,7 +460,7 @@ body {
 
 .accordion {
   .accordion-item {
-    border-bottom: 1px solid $lightgray;
+    border-bottom: 1px solid #e5e5e5;
     button[aria-expanded='true'] {
       border-bottom: 1px solid #03b5d2;
     }
@@ -479,7 +471,7 @@ body {
     text-align: left;
     width: 100%;
     padding: 1em 0;
-    color: $text;
+    color: #7288a2;
     font-size: 1.15rem;
     font-weight: 400;
     border: none;
@@ -529,7 +521,7 @@ body {
     }
   }
   button[aria-expanded='true'] {
-    color: $blue;
+    color: #03b5d2;
     .icon {
       &::after {
         width: 0;
