--- a/style.css
+++ b/style.css
@@ -245,7 +245,7 @@ button.white{
     color: #000000;
 }
 /*-------------------------*/
- /* #product1 {
+#product1 {
     min-height: 100vh;
     display: flex;
     align-items: center;
