--- a/style.css
+++ b/style.css
@@ -371,7 +371,7 @@ button.white{
     #product1 .swiper-navBtn{
       display: none;
     }
-  }*/
+  }
 /*----------------------*/
 #sm-banner{
   display: flex;
