--- a/style.css
+++ b/style.css
@@ -299,9 +299,9 @@ button.white{
 
 #product1 .card {
   --bg-card: #27272a;
-  --primary: #6d28d9;
-  --primary-800: #4c1d95;
-  --primary-shadow: #2e1065;
+  --primary: #009f7a;
+  --primary-800: #1d9539;
+  --primary-shadow: #1e6510;
   --light: #d9d9d9;
   --zinc-800: #18181b;
   --bg-linear: linear-gradient(0deg, var(--primary) 50%, var(--light) 125%);
@@ -393,9 +393,7 @@ button.white{
 }
 #product1 .item-list-button:focus {
   background-color: var(--primary);
-
   border: 2px solid var(--primary-shadow);
-
   box-shadow: inset 0px 1px 4px var(--primary-shadow);
 }
 
@@ -428,7 +426,7 @@ button.white{
   color: var(--light);
   text-wrap: nowrap;
 
-  border: 2px solid hsla(262, 83%, 58%, 0.5);
+  border: 2px solid hsla(133, 94%, 20%, 0.5);
   border-radius: 0.5rem;
   box-shadow: inset 0 0 0.25rem 1px var(--light);
 }
