--- a/style.css
+++ b/style.css
@@ -500,6 +500,7 @@ button.white{
   display: flex;
   justify-content: center;
   align-items: center;
+  text-decoration:none
   padding: 10px 15px;
   gap: 15px;
   background-color: #41B06E;
