--- a/Deal.css
+++ b/Deal.css
@@ -1,3 +1,55 @@
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@300;400;500;600;700&display=swap');
+*{ 
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-family: 'Kanit', sans-serif;
+}
+
+h1{
+    font-size: 50px;
+    line-height: 64px;
+    color: #222;
+}
+
+h2{
+    font-size:46px;
+    line-height: 54px;
+    color: #222;
+}
+
+h4{
+    font-size:20px;
+    color: #222;
+}
+h6{
+    font-weight:700;
+    font-size:12px;
+}
+
+a{
+    color: #222;
+    text-decoration: none;
+}
+
+p{
+    font-size: 16px;
+    color: rgb(202, 201, 201);
+    margin: 15px 0 20px 0;
+}
+
+.section-m1{
+    margin: 40px 0;
+}
+
+.section-p1{
+    margin: 40px 80px;
+}
+
+body{
+    width: 100%;
+}
+
 .Servicerentalrules
 {
     padding: 0rem 3rem;
@@ -36,4 +88,64 @@
 .notedocumentsusedforrentingservices
 {
     color: #ff0000;
+}
+
+/*Header start*/
+#header{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 20px 80px;
+    background: #E3E6F3;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
+    z-index: 999;
+    position: sticky;
+    top: 0;
+    left: 0;
+}
+
+#navbar{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+}
+
+#navbar li{
+    list-style: none;
+    padding: 0 20px;
+    position: relative;
+}
+
+#navbar li a{
+    text-decoration: none;
+    font-size: 16px;
+    font-weight: 600;
+    color: #1a1a1a;
+    transition: 0.3s ease;
+}
+
+#navbar li a:hover,
+#navbar li a.active{
+    color: #4bce00;
+}
+
+#navbar li a.active::after,
+#navbar li a:hover::after{
+    content: "";
+    width: 30%;
+    height: 2px;
+    background: #4bce00;
+    position: absolute;
+    bottom: -4px;
+    left: 20px;
+}
+
+#mobile{
+    display: none;
+    align-items: center;
+}
+
+#close{
+    display: none;
 }
