--- a/style.css
+++ b/style.css
@@ -321,6 +321,7 @@ button.white{
 
 #product1 .grid_cards {
   display: grid;
+  gap: 10px;
   grid-template-columns: repeat(3, 1fr);
   margin-bottom: 6rem;
   margin-left: 6rem;
