--- a/style.css
+++ b/style.css
@@ -250,6 +250,20 @@ button.white{
   text-align: center;
 }
 
+#product1 .pdf {
+  width: 100%;
+  aspect-ratio: 4 / 3;
+}
+
+#product1 .pdf,
+html,
+body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
 /*----------------------*/
 #sm-banner{
   display: flex;
