--- a/style.css
+++ b/style.css
@@ -251,7 +251,8 @@ button.white{
 }
 
 #product1 .pdf {
-  justify-content: space-between;
+  margin-left: auto;
+  margin-right: auto;
   width: 60%;
   aspect-ratio: 4 / 3;
 }
