--- a/style.css
+++ b/style.css
@@ -268,7 +268,7 @@ body {
 /*----------------------*/
 #sm-banner{
   display: flex;
-  justify-content: space-between;
+  justify-content: flex-end;
   flex-wrap: wrap;
 }
 
