--- a/style.css
+++ b/style.css
@@ -251,8 +251,9 @@ button.white{
 }
 
 #product1 .pdf {
-  width: 60%;
-  aspect-ratio: 4 / 2.5;
+  width: 100%;
+  margin-left: 100px;
+  aspect-ratio: 4 / 3;
 }
 
 #product1 .pdf,
