--- a/style.css
+++ b/style.css
@@ -251,7 +251,8 @@ button.white{
 }
 
 #product1 .pdf {
-  display: flex;
+  display: grid;
+  grid-template-columns: auto auto auto;
   width: 60%;
   margin-left: 100px;
   aspect-ratio: 4 / 3;
