--- a/style.css
+++ b/style.css
@@ -250,7 +250,7 @@ button.white{
 }
 
 #product1 .pdf {
-  width: 100%;
+  width: 60%;
   aspect-ratio: 4 / 3;
 }
 
@@ -258,7 +258,7 @@ button.white{
 html,
 body {
   height: 100%;
-  margin: 0;
+  margin-left: 200px;
   padding: 0;
   justify-content: center;
 }
