--- a/style.css
+++ b/style.css
@@ -259,7 +259,7 @@ html,
 body {
   text-align: center;
   height: 100%;
-  margin: 0;
+  margin-top: 10px;
   padding: 0;
   justify-content: center;
 }
