--- a/Deal.css
+++ b/Deal.css
@@ -218,12 +218,12 @@ footer .copyright {
     margin-top: 50px;
 }
 
-#RentalRulesandDocument .pdf {
+.pdf {
     width: 60%;
     aspect-ratio: 4 / 3;
 }
 
-#RentalRulesandDocument .pdf,
+.pdf,
 html,
 body {
     text-align: center;
