--- a/Deal.css
+++ b/Deal.css
@@ -229,8 +229,5 @@ footer .copyright {
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 0;
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-    place-items: center;
+    display: block;
 }
