--- a/Deal.css
+++ b/Deal.css
@@ -229,5 +229,6 @@ footer .copyright {
     margin-top: 20px;
     margin-bottom: 20px;
     padding: 0;
-    display: block;
+    display: flex;
+    flex-direction: row-reverse;
 }
