--- a/Deal.css
+++ b/Deal.css
@@ -230,5 +230,5 @@ footer .copyright {
     margin-bottom: 20px;
     padding: 0;
     display: flex;
-    flex-direction: row-reverse;
+  justify-content: center;
 }
