--- a/Deal.css
+++ b/Deal.css
@@ -230,5 +230,6 @@ footer .copyright {
     margin-bottom: 20px;
     padding: 0;
     display: flex;
-  justify-content: center;
+    align-items: center;
+    justify-content: center;
 }
