--- a/Deal.css
+++ b/Deal.css
@@ -226,10 +226,6 @@ footer .copyright {
 .pdf
 {
     height: 100%;
-    margin-top: 20px;
-    margin-bottom: 20px;
+    margin: auto;
     padding: 0;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
