--- a/Deal.css
+++ b/Deal.css
@@ -222,6 +222,6 @@ footer .copyright {
     width: 50%;
     height: 100%;
     aspect-ratio: 4 / 3;
-    margin: auto;
+    margin: 20px;
     padding: 0;
 }
