--- a/Deal.css
+++ b/Deal.css
@@ -219,8 +219,10 @@ footer .copyright {
 }
 
 #pdf {
-    width: 50%;
-    height: 100%;
+    display: grid;
+    place-items: center;
+    width:"50%" ;
+    height: "100%" ;
     aspect-ratio: 4 / 3;
     margin: auto;
     padding: 0;
