--- a/Deal.css
+++ b/Deal.css
@@ -220,7 +220,8 @@ footer .copyright {
 
 .pdf {
     width: 50%;
-    margin-left: 500px;
+    margin-left: 450px;
+    margin-top: 50px;
 }
 
 .pdf,
