--- a/Deal.css
+++ b/Deal.css
@@ -218,10 +218,15 @@ footer .copyright {
     margin-top: 50px;
 }
 
+#object{
+    background-color: #000000;
+}
+
 .pdf {
     width: 50%;
     margin-left: 450px;
     margin-top: 50px;
+    margin-bottom: 50px;
 }
 
 .pdf,
