--- a/Deal.css
+++ b/Deal.css
@@ -218,7 +218,7 @@ footer .copyright {
     margin-top: 50px;
 }
 
-.pdf {
+Rule.pdf {
     width: 50%;
     margin-left: 450px;
     margin-top: 50px;
