--- a/Deal.css
+++ b/Deal.css
@@ -218,7 +218,11 @@ footer .copyright {
     margin-top: 50px;
 }
 
-Rule.pdf {
+ule
+{
+
+}
+.pdf {
     width: 50%;
     margin-left: 450px;
     margin-top: 50px;
