--- a/product.css
+++ b/product.css
@@ -68,7 +68,7 @@ button.white{
     align-items: center;
     justify-content: space-between;
     padding: 20px 80px;
-    background: #132faf;
+    background: #ffffff;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.1);
     z-index: 999;
     position: sticky;
