--- a/viosW.css
+++ b/viosW.css
@@ -428,11 +428,10 @@ footer .copyright {
     text-align: start;
   }
 }
-
-
+/* popup */
 .overlay{
     position: fixed;
-    top: 0;
+    top: 10%;
     bottom: 0;
     left: 0;
     right: 0;
@@ -479,3 +478,19 @@ footer .copyright {
 }
 
 /* Form design */
+.contentpopup{
+    border-radius: 5px;
+    background-color: #e7e7e7;
+    padding: 20px 0;
+}
+
+input[type=text], textarea{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
