--- a/productdetails.css
+++ b/productdetails.css
@@ -458,6 +458,7 @@ footer .copyright {
 
 .wrapperpopup h2{
     margin-top: 0;
+    margin-bottom: 5%;
     color: #333;
 }
 
@@ -472,7 +473,7 @@ footer .copyright {
     color: #333;
 }
 
-.wrapperpopup .contentpopup{
+.wrapperpopup .contactpopup{
     max-height: 30%;
     overflow: auto;
 }
@@ -493,4 +494,67 @@ input[type=text], textarea{
     margin-top: 6px;
     margin-bottom: 16px;
     resize: vertical;
+}
+
+input[type=datetime-local], textarea{
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+.Form .columnPB{
+    display: flex;
+    column-gap: 2%;
+}
+
+.Form :where(.place-option, .place){
+    display: flex;
+    align-items: center;
+    column-gap: 20%;
+}
+
+.Form .place{
+    column-gap: 10%;
+    cursor: pointer;
+}
+
+.Form :where(.place input, .place label){
+    cursor: pointer;
+}
+
+.Form .place-box{
+    margin-top: 20px;
+}
+
+.place-box h3{
+    color: #333;
+    font-size: 1rem;
+    font-weight: 600;
+    margin-bottom: 8px;
+}
+
+.Form .Summit button{
+    height: 55px;
+    width: 100%;
+    color: #fff;
+    font-size: 1rem;
+    border: none;
+    margin-top: 30px;
+    cursor: pointer;
+    border-radius: 6px;
+    font-weight: 400;
+    transition: all 0.2 ease;
+    background-color: rgba(130, 106, 251);
+}
+
+.place input{
+    accent-color: rgba(130, 106, 251);
+}
+.Form .Summit button:hover{
+    background-color: rgb(73, 45, 212);
 }
